# sudoku

./: .travis.yml  LICENSE.md  Makefile  README.md  puzzle.txt  sudoku.cabal
executable/: Main.hs
test-suite/: SudokuSpec.hs  TestSudoku.hs
