name: sudoku
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
copyright: 2015 Robert T. McGibbon <rmcgibbo@gmail.com>
maintainer: Robert T. McGibbon <rmcgibbo@gmail.com>
synopsis: Toy Sudoku SAT Solver
author: Robert T. McGibbon <rmcgibbo@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6
extra-source-files:
    CHANGELOG.md
    README.md
    puzzle.txt

library
    exposed-modules:
        Sudoku
        -- HASKELETON: New.Module
    build-depends:
        base ==4.*,
        split >= 0.2.2 && < 0.3,
        picosat >= 0.1.3 && < 0.2
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall

executable sudoku
    main-is: Main.hs
    build-depends:
        base -any,
        sudoku -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-prof-options: -auto-all -prof
    ghc-options: -Wall
