name: sudoku
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
category: game
copyright: 2015 Robert T. McGibbon <rmcgibbo@gmail.com>
maintainer: Robert T. McGibbon <rmcgibbo@gmail.com>
synopsis: Toy Sudoku SAT Solver
description: Simple sudoku solver
author: Robert T. McGibbon <rmcgibbo@gmail.com>
tested-with: GHC ==7.8 GHC ==7.6 GHC == 7.10
extra-source-files:
    CHANGELOG.md
    README.md
    puzzle.txt
source-repository head
    type:     git
    location: git://github.com/rmcgibbo/sudoku.git


library
    exposed-modules:
        Sudoku
        -- HASKELETON: New.Module
    build-depends:
        base ==4.*,
        split >= 0.2.2 && < 0.3,
        picosat >= 0.1.2 && < 0.2
    default-language: Haskell2010
    hs-source-dirs: library
    ghc-options: -Wall

executable sudoku
    main-is: Main.hs
    build-depends:
        base -any,
        sudoku -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -Wall

test-suite tests
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        sudoku -any,
        hspec ==2.*,
        HUnit -any,
        QuickCheck -any,
        split >= 0.2.2 && < 0.3,
        picosat >= 0.1.3 && < 0.2
    default-language: Haskell2010
    hs-source-dirs: library test-suite
    other-modules:
        Sudoku
        SudokuSpec

test-suite style
    type: exitcode-stdio-1.0
    main-is: HLint.hs
    build-depends:
        base -any,
        hlint ==1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    ghc-options: -Wall -Werror
